Removed piano because vector arrows go offscreen
Fixed: Changing objects causes the chart cursor node to appear when in playback mode
Updated to new chart library
Removed the blue timeline bar for all tabs with charts
Removed gravity force from forces and motion chart
Fixed colors for X,V,A charts
Fixed: Don't let the cursor drag past max time
Fixed a problem where the blue timeline handle could disappear off the right of the screen
Fixed: chart cursors sometimes become disconnected
Added vertical label for chart slider node
Added chart cursor
Connected parallel applied force vertical slider to the model
Connected parallel applied force text box to the model
Removed Coordinates and Energy tabs from the Ramp simulation
# 1.03.68 (41882) Jun 23, 2010
Moved "Ramp" and "Forces and Motion" sims back into same package
Changed the "Go!" button into a button with the same icon as the clock controls play button
Fixed: Made it so that losing an object in the game mode requires the acceleration to be zero, so that an object at the peak of a trajectory up the ramp won't end the round
# 1.03.67 (41358) Jun 2, 2010
Fixed: FBD has a hand but is not interactive in the game mode
Fixed: Ramp color wrong on startup between games
Added a new failure mode: Not Enough Energy to Overcome Static Friction
Moved the pusher character behind the play area vectors
Fixed: Friction force should enter into the system before wall force, since the object would have to move before "communicating" with the wall.
Removed an orphaned string 'sound'
Fixed a bug that caused charts only to clear after clearing the model twice.
Fixed: icicle graphics move around on the ramp while the sim is running
# 1.03.66 (41240) May 26, 2010
Improved performance on chart tabs by switching from JLabel to JTextField
Removed the "Fixed/Adjustable" radio buttons from the coordinates tab
Fixed: The F_sum label in the control panel overlaps the arrow symbol